--- a/charts/wordpress/templates/configmap.yaml
+++ b/charts/wordpress/templates/configmap.yaml
@@ -1191,18 +1191,16 @@ data:
     # Disable WordPress Core Auto-Updates (managed by Helm chart via image updates)
     # ============================================================================
 
-    # Read current auto-update settings in one query
-    AUTO_UPDATE_SETTINGS=$(wp db query "SELECT option_name, option_value FROM ${TABLE_PREFIX:-wp_}options WHERE option_name IN ('auto_update_core_dev', 'auto_update_core_minor', 'auto_update_core_major');" --skip-column-names 2>/dev/null || echo "")
-
-    # Check and update each setting only if not already disabled (direct DB update - faster than wp-cli)
-    for setting in auto_update_core_dev auto_update_core_minor auto_update_core_major; do
-      current_value=$(echo "$AUTO_UPDATE_SETTINGS" | grep "^$setting" | awk '{print $2}')
-      if [ "$current_value" != "disabled" ]; then
-        echo "Disabling $setting..."
-        # Direct DB update instead of wp option update (avoids loading WordPress)
-        wp db query "INSERT INTO ${TABLE_PREFIX}options (option_name, option_value, autoload) VALUES ('$setting', 'disabled', 'yes') ON DUPLICATE KEY UPDATE option_value='disabled';" >/dev/null 2>&1
-      fi
-    done
+    echo "Disabling WordPress core auto-updates..."
+    # Update all 3 settings in one multi-row query (faster than 3 separate queries)
+    wp db query "
+      INSERT INTO ${TABLE_PREFIX}options (option_name, option_value, autoload) VALUES
+        ('auto_update_core_dev', 'disabled', 'yes'),
+        ('auto_update_core_minor', 'disabled', 'yes'),
+        ('auto_update_core_major', 'disabled', 'yes')
+      ON DUPLICATE KEY UPDATE option_value='disabled';
+    " 2>&1 | grep -v "^$" || true
+    echo "Core auto-updates disabled!"
 
     # ============================================================================
     # WordPress Configuration (Localization, Permalinks, User Metadata)
