--- a/charts/wordpress/templates/configmap.yaml
+++ b/charts/wordpress/templates/configmap.yaml
@@ -758,38 +758,79 @@ data:
   # Library: Database Lock Functions (lib-lock.sh)
   # ============================================================================
   # Contains: claim_bootstrap_lock(), release_bootstrap_lock(), claim_config_lock(), release_config_lock()
-  # Provides distributed locking for multi-pod deployments using wp_options table
+  # Provides distributed locking for multi-pod deployments using database tables
+  # Uses heartbeat mechanism: lock holder updates timestamp every 15s,
+  # waiters consider lock stale if no heartbeat for 60s
   lib-lock.sh: |
     #!/bin/bash
     # WordPress Helm Chart - Database Lock Library
     # Provides distributed locking for multi-pod deployments
     #
-    # Uses wp_options table with hostname-based stale detection:
+    # Heartbeat-based locking:
+    #   - Lock holder runs a background heartbeat (updates timestamp every 15s)
+    #   - Waiters check: was lock updated in last 60s?
+    #   - If no heartbeat for 60s → pod crashed → lock is stale
     #   - Same hostname (pod restart): Lock immediately overridden
-    #   - Different hostname: 60s timeout for stale detection
     #   - Lock format: hostname-timestamp
 
     BOOTSTRAP_LOCK_ACQUIRED=false
     CONFIG_LOCK_ACQUIRED=false
-    readonly LOCK_TIMEOUT=300  # 300 seconds (5 min) until config lock is considered stale (for Composer operations)
+    HEARTBEAT_PID=""
+    readonly HEARTBEAT_INTERVAL=15  # Seconds between heartbeat updates
+    readonly STALE_THRESHOLD=60     # Seconds without heartbeat before lock is considered stale
+    readonly MAX_LOCK_WAIT=600      # Absolute max wait time in seconds (safety net)
+
+    # Start heartbeat for a lock - updates timestamp every HEARTBEAT_INTERVAL seconds
+    # Args: $1 = lock type ("bootstrap" or "config")
+    _start_heartbeat() {
+      local lock_type="$1"
+      local pod_hostname="$(hostname)"
+
+      # Kill any existing heartbeat first
+      _stop_heartbeat
+
+      if [ "$lock_type" = "bootstrap" ]; then
+        (
+          while true; do
+            sleep $HEARTBEAT_INTERVAL
+            wp db query "UPDATE ${TABLE_PREFIX}helm_locks SET lock_value='$pod_hostname-$(date +%s)' WHERE lock_name='bootstrap' AND lock_value LIKE '$pod_hostname-%';" >/dev/null 2>&1 || true
+          done
+        ) &
+      else
+        (
+          while true; do
+            sleep $HEARTBEAT_INTERVAL
+            wp db query "UPDATE ${TABLE_PREFIX}options SET option_value='$pod_hostname-$(date +%s)' WHERE option_name='_helm_config_lock' AND option_value LIKE '$pod_hostname-%';" >/dev/null 2>&1 || true
+          done
+        ) &
+      fi
+      HEARTBEAT_PID=$!
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Heartbeat started (PID: $HEARTBEAT_PID) for $lock_type lock" >&2
+    }
+
+    # Stop the heartbeat background process
+    _stop_heartbeat() {
+      if [ -n "$HEARTBEAT_PID" ]; then
+        kill $HEARTBEAT_PID 2>/dev/null || true
+        wait $HEARTBEAT_PID 2>/dev/null || true
+        [ "${DEBUG}" = "true" ] && echo "DEBUG: Heartbeat stopped (PID: $HEARTBEAT_PID)" >&2
+        HEARTBEAT_PID=""
+      fi
+    }
 
     # Attempt to claim bootstrap lock using dedicated helm_locks table
     # This is used BEFORE WordPress installation when wp_options doesn't exist yet
     #
     # Returns:
-    #   0 - Lock successfully claimed
+    #   0 - Lock successfully claimed (heartbeat started)
     #   1 - Lock held by another pod (after retries)
     #
-    # Implementation:
-    #   - Uses dedicated helm_locks table (created on-demand)
-    #   - Lock format: hostname-timestamp
-    #   - Same hostname: Immediate override (pod restart)
-    #   - Different hostname + stale (>600s): Override (long timeout for WP install)
-    #   - Different hostname + fresh: Wait and retry
+    # Heartbeat: Lock holder updates timestamp every 15s.
+    # Waiters check: no heartbeat for 60s → lock is stale → override.
     claim_bootstrap_lock() {
-      local max_retries=6  # 6 retries × 10s = 60s max wait
       local retry_interval=10
       local retry_count=0
+      local max_retries=$((MAX_LOCK_WAIT / retry_interval))
       local pod_hostname="$(hostname)"
       local current_time=$(date +%s)
 
@@ -806,14 +847,16 @@ data:
       " >/dev/null 2>&1
 
       while [ $retry_count -lt $max_retries ]; do
-        # Atomic lock claim with 600s timeout for bootstrap (WordPress install can be slow)
+        current_time=$(date +%s)
+
+        # Atomic lock claim: override if same hostname OR no heartbeat for STALE_THRESHOLD seconds
         wp db query "
           INSERT INTO ${TABLE_PREFIX}helm_locks (lock_name, lock_value)
           VALUES ('bootstrap', '$pod_hostname-$current_time')
           ON DUPLICATE KEY UPDATE
             lock_value = IF(
               lock_value LIKE '$pod_hostname-%'
-              OR CAST(SUBSTRING_INDEX(lock_value, '-', -1) AS UNSIGNED) < $current_time - 600,
+              OR CAST(SUBSTRING_INDEX(lock_value, '-', -1) AS UNSIGNED) < $current_time - $STALE_THRESHOLD,
               '$pod_hostname-$current_time',
               lock_value
             );
@@ -827,27 +870,26 @@ data:
         if [[ "$lock_owner" == "$pod_hostname-$current_time" ]]; then
           echo "Bootstrap lock acquired successfully!"
           BOOTSTRAP_LOCK_ACQUIRED=true
-          [ "${DEBUG}" = "true" ] && echo "DEBUG: Pod $pod_hostname claimed bootstrap lock" >&2
+          _start_heartbeat "bootstrap"
           return 0
         fi
 
         retry_count=$((retry_count + 1))
         if [ $retry_count -lt $max_retries ]; then
           local wait_time=$((retry_count * retry_interval))
-          echo "Another pod is installing WordPress, waiting... (${wait_time}s/60s)"
+          echo "Another pod is installing WordPress, waiting... (${wait_time}s)"
           sleep $retry_interval
-          current_time=$(date +%s)
         fi
       done
 
-      echo "Timeout waiting for bootstrap lock after 60s"
-      echo "Another pod is still installing WordPress. This pod will restart and retry."
+      echo "ERROR: Timeout waiting for bootstrap lock after ${MAX_LOCK_WAIT}s"
       return 1
     }
 
-    # Release bootstrap lock
+    # Release bootstrap lock and stop heartbeat
     release_bootstrap_lock() {
       if [ "$BOOTSTRAP_LOCK_ACQUIRED" = "true" ]; then
+        _stop_heartbeat
         [ "${DEBUG}" = "true" ] && echo "DEBUG: Releasing bootstrap lock" >&2
         local pod_hostname="$(hostname)"
         wp db query "DELETE FROM ${TABLE_PREFIX}helm_locks WHERE lock_name='bootstrap' AND lock_value LIKE '$pod_hostname-%';" >/dev/null 2>&1 || true
@@ -860,33 +902,31 @@ data:
     # This is used AFTER WordPress installation for plugin/theme/config management
     #
     # Returns:
-    #   0 - Lock successfully claimed
+    #   0 - Lock successfully claimed (heartbeat started)
     #   1 - Lock held by another pod (after retries)
     #
-    # Implementation:
-    #   - Uses wp_options table with atomic INSERT...ON DUPLICATE KEY UPDATE
-    #   - Lock format: hostname-timestamp
-    #   - Same hostname: Immediate override (pod restart)
-    #   - Different hostname + stale (>300s): Override
-    #   - Different hostname + fresh: Wait and retry (up to 300s)
+    # Heartbeat: Lock holder updates timestamp every 15s.
+    # Waiters check: no heartbeat for 60s → lock is stale → override.
     claim_config_lock() {
-      local max_retries=30  # 30 retries × 10s = 300s max wait (matches LOCK_TIMEOUT)
       local retry_interval=10
       local retry_count=0
+      local max_retries=$((MAX_LOCK_WAIT / retry_interval))
       local pod_hostname="$(hostname)"
       local current_time=$(date +%s)
 
       [ "${DEBUG}" = "true" ] && echo "DEBUG: Attempting config lock, hostname: $pod_hostname" >&2
 
       while [ $retry_count -lt $max_retries ]; do
-        # Atomic lock claim: Insert or update if stale/same hostname
+        current_time=$(date +%s)
+
+        # Atomic lock claim: override if same hostname OR no heartbeat for STALE_THRESHOLD seconds
         wp db query "
           INSERT INTO ${TABLE_PREFIX}options (option_name, option_value, autoload)
           VALUES ('_helm_config_lock', '$pod_hostname-$current_time', 'no')
           ON DUPLICATE KEY UPDATE
             option_value = IF(
               option_value LIKE '$pod_hostname-%'
-              OR CAST(SUBSTRING_INDEX(option_value, '-', -1) AS UNSIGNED) < $current_time - $LOCK_TIMEOUT,
+              OR CAST(SUBSTRING_INDEX(option_value, '-', -1) AS UNSIGNED) < $current_time - $STALE_THRESHOLD,
               '$pod_hostname-$current_time',
               option_value
             );
@@ -899,28 +939,28 @@ data:
 
         if [[ "$lock_owner" == "$pod_hostname-$current_time" ]]; then
           CONFIG_LOCK_ACQUIRED=true
+          _start_heartbeat "config"
           [ "${DEBUG}" = "true" ] && echo "DEBUG: Pod $pod_hostname claimed config lock" >&2
           return 0
         fi
 
-        # Lock held by another pod with fresh timestamp
+        # Lock held by another pod with fresh heartbeat
         retry_count=$((retry_count + 1))
         if [ $retry_count -lt $max_retries ]; then
           local wait_time=$((retry_count * retry_interval))
-          echo "Another pod is running init process, waiting... (${wait_time}s/300s)"
+          echo "Another pod is running init process, waiting... (${wait_time}s)"
           sleep $retry_interval
-          current_time=$(date +%s)  # Update timestamp for next attempt
         fi
       done
 
-      [ "${DEBUG}" = "true" ] && echo "DEBUG: Timeout waiting for config lock after 300s" >&2
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Timeout waiting for config lock after ${MAX_LOCK_WAIT}s" >&2
       return 1
     }
 
-    # Release the configuration lock
-    # Removes lock entry from wp_options table
+    # Release the configuration lock and stop heartbeat
     release_config_lock() {
       if [ "$CONFIG_LOCK_ACQUIRED" = "true" ]; then
+        _stop_heartbeat
         [ "${DEBUG}" = "true" ] && echo "DEBUG: Releasing config lock" >&2
         local pod_hostname="$(hostname)"
         wp db query "DELETE FROM ${TABLE_PREFIX}options WHERE option_name='_helm_config_lock' AND option_value LIKE '$pod_hostname-%';" >/dev/null 2>&1 || true
@@ -1024,7 +1064,7 @@ data:
     #
     # Libraries:
     #   - lib-core.sh: Core utilities (wp, run, handle_error, retry_command, assert)
-    #   - lib-lock.sh: Database locking (claim_bootstrap_lock, release_bootstrap_lock, claim_config_lock, release_config_lock)
+    #   - lib-lock.sh: Database locking with heartbeat (claim/release bootstrap + config locks)
     #   - lib-composer.sh: Composer management (ensure_composer, composer_exec)
     #
     # Environment Variables:
@@ -1091,8 +1131,8 @@ data:
     COMPOSER_PLUGINS_PENDING_ACTIVATION=()
     ASSERT_FAILURES=0
 
-    # Setup exit trap for lock release
-    trap 'release_bootstrap_lock; release_config_lock' EXIT
+    # Setup exit trap for lock release and heartbeat cleanup
+    trap '_stop_heartbeat; release_bootstrap_lock; release_config_lock' EXIT
 
     # ============================================================================
     # Wait for Database
@@ -1125,7 +1165,7 @@ data:
     # This lock prevents race conditions when multiple pods start simultaneously
     # and try to install WordPress at the same time.
     #
-    # Uses MySQL GET_LOCK() which works without requiring wp_options table.
+    # Uses dedicated helm_locks table with heartbeat-based stale detection.
 
     # Check if WordPress is already installed (quick check before claiming lock)
     WP_ALREADY_INSTALLED=false
@@ -1143,8 +1183,7 @@ data:
         echo "ERROR: Failed to claim bootstrap lock - another pod may have installation issues"
         exit 1
       fi
-      # Setup trap to release bootstrap lock on exit
-      trap 'release_bootstrap_lock; release_config_lock' EXIT
+      # Trap already set up above with _stop_heartbeat + release functions
     fi
 
     # ============================================================================
@@ -1232,9 +1271,8 @@ data:
 
     echo "Acquiring configuration lock for initialization..."
     if ! claim_config_lock; then
-      echo "ERROR: Timeout waiting for configuration lock after 300s"
-      echo "Another pod may be stuck or experiencing issues."
-      echo "Check the other pod's logs for errors."
+      echo "ERROR: Timeout waiting for configuration lock after ${MAX_LOCK_WAIT}s"
+      echo "Another pod may be stuck. Check its logs for errors."
       exit 1
     fi
 
