chore(wordpress): update version to 3.0.0-beta.17

--- a/charts/wordpress/samples/advanced2.values.yaml
+++ b/charts/wordpress/samples/advanced2.values.yaml
@@ -53,6 +53,7 @@ service:
   nodePorts:
     http: 30111
 storage:
+  storageClass: "longhorn"
   resourcePolicy: "" # Delete PVC on helm uninstall
   accessModes:
     - ReadWriteMany
