--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,45 @@
     "customManagers": [
         {
             "customType": "regex",
+            "description": "Update tag in values.yaml for linuxserver/wireguard",
+            "fileMatch": [
+                "^charts/wireguard/values\\.yaml$"
+            ],
+            "matchStrings": [
+                "repository:\\s+linuxserver/wireguard[\\s\\S]*?tag:\\s+['\"]?(?<currentValue>[^'\"\\s@]+)(?:@(?<currentDigest>sha256:[a-f0-9]+))?"
+            ],
+            "depNameTemplate": "docker.io/linuxserver/wireguard",
+            "datasourceTemplate": "docker",
+            "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$"
+        },
+        {
+            "customType": "regex",
+            "description": "Update appVersion in Chart.yaml for linuxserver/wireguard",
+            "fileMatch": [
+                "^charts/wireguard/Chart\\.yaml$"
+            ],
+            "matchStrings": [
+                "appVersion:\\s+['\"]?(?<currentValue>[^'\"\\s]+)['\"]?\\s*#\\s*renovate:\\s*image=(?<packageName>[^\\s]+)"
+            ],
+            "depNameTemplate": "{{{packageName}}}",
+            "datasourceTemplate": "docker",
+            "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$"
+        },
+        {
+            "customType": "regex",
+            "description": "Update artifacthub.io/images in Chart.yaml for linuxserver/wireguard",
+            "fileMatch": [
+                "^charts/wireguard/Chart\\.yaml$"
+            ],
+            "matchStrings": [
+                "image: (?<packageName>[^:]+):(?<currentValue>[^\\s]+)"
+            ],
+            "depNameTemplate": "{{{packageName}}}",
+            "datasourceTemplate": "docker",
+            "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$"
+        },
+        {
+            "customType": "regex",
             "description": "Update appVersion in Chart.yaml",
             "fileMatch": [
                 "^charts/.*/Chart\\.yaml$"
@@ -27,8 +66,7 @@
                 "appVersion:\\s+['\"]?(?<currentValue>[^'\"\\s]+)['\"]?\\s*#\\s*renovate:\\s*image=(?<packageName>[^\\s]+)"
             ],
             "depNameTemplate": "{{{packageName}}}",
-            "datasourceTemplate": "docker",
-            "versioningTemplate": "docker"
+            "datasourceTemplate": "docker"
         },
         {
             "customType": "regex",
@@ -40,11 +78,19 @@
                 "image: (?<packageName>[^:]+):(?<currentValue>[^\\s]+)"
             ],
             "depNameTemplate": "{{{packageName}}}",
-            "datasourceTemplate": "docker",
-            "versioningTemplate": "docker"
+            "datasourceTemplate": "docker"
         }
     ],
     "packageRules": [
+        {
+            "matchManagers": ["custom.regex"],
+            "matchPackageNames": [
+                "linuxserver/wireguard",
+                "/^docker\\.io\\/linuxserver\\/wireguard$/"
+            ],
+            "groupName": "linuxserver/wireguard",
+            "description": "Group linuxserver wireguard updates (versioning from customManagers)"
+        },
         {
             "matchUpdateTypes": [
                 "digest"
@@ -62,8 +108,7 @@
                 "linuxserver/wireguard",
                 "/^docker\\.io\\/linuxserver\\/wireguard$/"
             ],
-            "versionCompatibility": "^(?<version>[^-]+)(?<compatibility>-.*)$",
-            "versioning": "loose",
+            "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
             "groupName": "linuxserver/wireguard",
             "description": "Handle linuxserver wireguard updates with full version including -rX-lsY suffix"
         },
