fix: add automergeType and automerge label to general automerge rules
- Add automergeType: pr to helm-values/custom.regex and helmv3 rules
- Add automerge label to PRs for better visibility
- Ensures all minor/patch/digest updates are auto-merged via PR

--- a/renovate.json
+++ b/renovate.json
@@ -178,7 +178,12 @@
                 "patch",
                 "digest"
             ],
-            "automerge": true
+            "addLabels": [
+                "automerge"
+            ],
+            "automerge": true,
+            "automergeType": "pr",
+            "description": "Auto-merge minor, patch, and digest updates"
         },
         {
             "matchManagers": [
@@ -188,7 +193,11 @@
                 "minor",
                 "patch"
             ],
+            "addLabels": [
+                "automerge"
+            ],
             "automerge": true,
+            "automergeType": "pr",
             "groupName": "charts/{{{ replace \"charts/\" \"\" parentDir }}}",
             "labels": [
                 "dependencies",
