--- a/renovate.json
+++ b/renovate.json
@@ -94,25 +94,22 @@
             "description": "Group linuxserver wireguard updates (versioning from customManagers)"
         },
         {
+            "matchManagers": [
+                "helm-values"
+            ],
+            "matchPackageNames": [
+                "docker.io/linuxserver/wireguard"
+            ],
+            "enabled": false,
+            "description": "Disable helm-values for wireguard (handled by custom.regex instead)"
+        },
+        {
             "matchUpdateTypes": [
                 "digest"
             ],
             "automerge": true,
             "automergeType": "pr",
             "description": "Auto-merge digest-only updates for security patches"
-        },
-        {
-            "matchManagers": [
-                "helm-values",
-                "custom.regex"
-            ],
-            "matchPackageNames": [
-                "linuxserver/wireguard",
-                "/^docker\\.io\\/linuxserver\\/wireguard$/"
-            ],
-            "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
-            "groupName": "linuxserver/wireguard",
-            "description": "Handle linuxserver wireguard updates with full version including -rX-lsY suffix"
         },
         {
             "matchManagers": [
@@ -212,14 +209,24 @@
         },
         {
             "matchManagers": [
+                "helm-values",
+                "custom.regex"
+            ],
+            "matchPackageNames": [
+                "linuxserver/wireguard",
+                "/^docker\\.io\\/linuxserver\\/wireguard$/"
+            ],
+            "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
+            "groupName": "linuxserver/wireguard",
+            "description": "Handle linuxserver wireguard updates with regex versioning (overrides general rule)"
+        },
+        {
+            "matchManagers": [
                 "helmv3"
             ],
             "matchUpdateTypes": [
                 "minor",
                 "patch"
-            ],
-            "addLabels": [
-                "automerge"
             ],
             "automerge": true,
             "automergeType": "pr",
@@ -230,6 +237,7 @@
                 "helm-chart"
             ],
             "addLabels": [
+                "automerge",
                 "{{#if isMajor}}major{{/if}}{{#if isMinor}}minor{{/if}}{{#if isPatch}}patch{{/if}}"
             ],
             "semanticCommits": "disabled",
